force-app/main/default/objects/AuthorisedContacts__c/AuthorisedContacts__c.object-meta.xml
<CustomObject>
    <label>Related Contacts</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Related Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>