force-app/main/default/objects/AuthorisedContacts__c/fields/AuthorisedContact__c.field-meta.xml
<CustomField>
    <fullName>AuthorisedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorised Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Authorised_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>