force-app/main/default/objects/AuthorisedContacts__c/fields/Calc_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Calc_Contact_Email__c</fullName>
    <description>This will determine what contact email should be used.</description>
    <formula>IF(ISBLANK(Related_Contact__c), Contact_Email__c, Related_Contact__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>