force-app/main/default/objects/AuthorisedContacts__c/fields/Calc_Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Calc_Contact_Mobile_Number__c</fullName>
    <description>This will determine what first name should be used.</description>
    <formula>IF(ISBLANK(Related_Contact__c), Contact_Mobile_Number__c, Related_Contact__r.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile Number</label>
    <type>Text</type>
</CustomField>