force-app/main/default/objects/AuthorisedContacts__c/fields/Calc_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Calc_Contact_Phone_Number__c</fullName>
    <description>This will determine what contact phone should be used.</description>
    <formula>IF(ISBLANK(Related_Contact__c), Contact_Phone_Number__c, Related_Contact__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>