force-app/main/default/objects/AuthorisedContacts__c/fields/Calc_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Calc_First_Name__c</fullName>
    <description>This will determine what first name should be used.</description>
    <formula>IF(ISBLANK(Related_Contact__c), First_Name__c, Related_Contact__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>