force-app/main/default/objects/AuthorisedContacts__c/fields/Calc_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Calc_Last_Name__c</fullName>
    <description>This will determine what last name should be used.</description>
    <formula>IF(ISBLANK(Related_Contact__c), Last_Name__c, Related_Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>