force-app/main/default/objects/AuthorisedContacts__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>This will capture standalone contact email information.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>