force-app/main/default/objects/AuthorisedContacts__c/fields/Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Number__c</fullName>
    <description>This will capture standalone contact mobile number information.</description>
    <label>Contact Mobile Number</label>
    <type>Phone</type>
</CustomField>