force-app/main/default/objects/AuthorisedContacts__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <description>This will capture standalone phone number information.</description>
    <label>Contact Phone Number</label>
    <type>Phone</type>
</CustomField>