force-app/main/default/objects/AuthorisedContacts__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>This field will capture what type of contact this record is.</description>
    <label>Contact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>