force-app/main/default/objects/AuthorisedContacts__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This will capture standalone contact first name.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>