force-app/main/default/objects/AuthorisedContacts__c/fields/Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will flag the related contact as initial contact</description>
    <label>Initial Contact</label>
    <type>Checkbox</type>
</CustomField>