force-app/main/default/objects/AuthorisedContacts__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>This will capture standalone contact last name.</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>