force-app/main/default/objects/AuthorisedContacts__c/fields/Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>Notification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will capture boolean flag if the contact should be notified when the case is closed.</description>
    <label>Notification Required?</label>
    <type>Checkbox</type>
</CustomField>