force-app/main/default/objects/AuthorisedContacts__c/fields/Notified_on_Status__c.field-meta.xml
<CustomField>
    <fullName>Notified_on_Status__c</fullName>
    <description>It will capture the current case status when automated notification was sent to the customer.</description>
    <label>Notified on Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>