force-app/main/default/objects/AuthorisedContacts__c/fields/Pref_Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Pref_Method_of_Contact__c</fullName>
    <description>This field will capture the method of contact the contact wanted to be contacted.</description>
    <label>Preferred Method of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>