force-app/main/default/objects/AuthorisedContacts__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Contacts (Related Contact)</relationshipLabel>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>