force-app/main/default/objects/AuthorisedContacts__c/recordTypes/AllCases.recordType-meta.xml
<RecordType>
    <fullName>AllCases</fullName>
    <active>true</active>
    <description>Use this type if you wish to grant a Contact authorisation to this case and all future cases.</description>
    <label>Authorised Contact - All Cases</label>
</RecordType>