force-app/main/default/objects/AuthorisedContacts__c/recordTypes/CaseOnly.recordType-meta.xml
<RecordType>
    <fullName>CaseOnly</fullName>
    <active>true</active>
    <description>Use this type if you wish to grant a Contact authorisation to this case only</description>
    <label>Authorised Contacts - Case Only</label>
</RecordType>