force-app/main/default/objects/AuthorisedContacts__c/recordTypes/Related_Contact.recordType-meta.xml
<RecordType>
    <fullName>Related_Contact</fullName>
    <active>true</active>
    <description>Use this type if you wish to relate a Contact to this case</description>
    <label>Related Contact</label>
</RecordType>