force-app/main/default/objects/AuthorisedContacts__c/recordTypes/StarTrack_Related_Contact.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_Related_Contact</fullName>
    <active>true</active>
    <description>This is used to identify all StarTrack records.</description>
    <label>StarTrack Related Contact</label>
</RecordType>